--- a/main.css
+++ b/main.css
@@ -1,25 +1,48 @@
-h1 {
+body {
+    background-color: #FCFAF9;
+    font-family: arial;
+  }
+  h1 {
     text-align: center;
+    color: #333333;
   }
   #description {
     text-align: center;
     font-style: italic;
+    color: #333333;
   }
   form {
     margin: auto;
     width: 75%;
     max-width: 450px;
     padding: 50px;
-    background: yellow;
-    font-size: 25px;
+    background: #333333;
+    font-size: 24px;
+    color: #FCFAF9;
   }
   input, select, textarea {
-    font-size: 20px;
+    font-size: 18px;
     width: 100%;
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: #FCFAF9;
+    color: #333333;
+  }
+  select {
+    width: 103%
   }
   div {
     margin-bottom: 25px;
   }
   .radio, .checkbox {
     width: auto;
+  }
+  label.radio, label.checkbox {
+    font-size: 20px;
+  }
+  .submit {
+    background-color: #48E5C2;
+    color: #333333;
+    width: 35%;
   }
